[gd_scene load_steps=7 format=2]

[ext_resource path="res://assetes/astro1.png" type="Texture" id=1]
[ext_resource path="res://scripts/small_astro_1.gd" type="Script" id=2]
[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://sounds/explode.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[sub_resource type="CircleShape2D" id=2]
radius = 8.06226

[node name="Sprite" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D"]
polygon = PoolVector2Array( 2, -7, 5, -7, 7, -5, 7, -2, 6, -1, 6, 0, 3, 0, 2, 0, 2, 2, 1, 3, 2, 4, 2, 5, 3, 5, 3, 7, -2, 7, -6, 4, -8, 1, -8, 0, -7, -2, -6, -4, -5, -5, -2, -6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, 1.49012e-07 )
scale = Vector2( 0.75, 0.7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
